// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Blueprint Variable view  initial render inline with no values 1`] = `
<div>
  <div
    class="variablesListTable variablePaddingL3"
  />
</div>
`;

exports[`Azure Blueprint Variable view  render with values 1`] = `<div />`;

exports[`Azure Blueprint Variable view  should render with inline template 1`] = `
<div>
  <div
    class="variablesListTable variablePaddingL3"
  />
  <p
    class="StyledProps--font StyledProps--main StyledProps--margin-left-xlarge"
  >
    cd.cloudFormation.templateFile
  </p>
  <div
    class="variablesListTable variablePaddingL3"
  />
</div>
`;
